# otterly

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
carbide/: Phase_6.md  carbide-project-guide.md  multiwindow_and_document_viewer.md  scratch.md  scratch_highvalue.md  terminal_security.md
design/: 01_BLUEPRINT.md  02_ARCHITECTURE_CN.md  03_GAP_ANALYSIS.md  04_UI_CN.md  05_POINTS_SYSTEM.md  07_badges.md  08_PET_SYSTEM_DESIGN.md  10_nlptrack.md  11_LOCAL_LLM_NLU.md  12_UPDATE_SYSTEM_DESIGN.md  (+23 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/git/: service.rs
src-tauri/src/features/nlp/: cache.rs  commands.rs  mod.rs  stats.rs  types.rs
src-tauri/src/features/nlp_kernal/: analysis.rs  bpe.rs  cache.rs  commands.rs  mod.rs  python_bridge.rs  stats.rs
src-tauri/src/features/notes/: service.rs
src-tauri/src/features/pets/: bazi.rs  commands.rs  db.rs  engine.rs  mod.rs  types.rs
src-tauri/src/features/points/: commands.rs  db.rs  engine.rs  types.rs
src-tauri/src/features/search/: db.rs  link_parser.rs  model.rs
src-tauri/src/features/settings/: service.rs
src-tauri/src/features/stats/: commands.rs  db.rs  mod.rs  types.rs
src-tauri/src/features/vault_session/: service.rs
src-tauri/src/shared/: constants.rs  storage.rs
src-tauri/src/tests/: mod.rs
src-tauri/tests/: link_rewrite.rs  notes_service_safety.rs  pets_engine.rs  search_db_behavior.rs  vault_session_service_parse.rs
(+307 files in other folders)
