[package]
name = "leapgrownotes"
version = "0.2.0"
description = "Local-first markdown vault"
authors = ["altamkhan"]
edition = "2021"
autotests = false

[lib]
name = "leapgrownotes_lib"
path = "src/lib.rs"

[[bin]]
name = "leapgrownotes"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
blake3 = "1.5.5"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.50.0"
mime_guess = "2.0.5"
notify = "7.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread", "sync"] }
openssl = { version = "0.10", features = ["vendored"] }
git2 = "0.19"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 16
